# spectroller

spectroller/: pyproject.toml
spectroller/controle/: controle.ino
spectroller/tests/: config.toml  testserial.py
